# mlflow_tutorial

./: .gitignore  TPOT_MLFlow.ipynb  requirements.txt  setup.cfg  train.py
data/: news_paragraphs_v1.1_valid.csv  sample.xlsx  sample_gold.csv
data/input/: class_label_by_topic.csv  class_label_by_topic_v1.0.csv  class_label_by_topic_v2.0.csv  class_label_layer_1.csv  class_label_layer_2.csv  class_labels.csv  class_labels_02.csv  class_labels_03.csv
data/labelled/: NEWS_API_ML_LABELLED.csv
data/output/: sample_summary_with_zero_shot_railway_L7D.csv
experiments/: TPOT_MLFlow.ipynb  consolidate_gold.ipynb  feature_demo_02.ipynb  summarize_silver.ipynb  zero_shot_on_gold_MLFlow.ipynb  zero_shot_vector_space_deepdive.ipynb
experiments_ST/: senttransformer_demo.ipynb
experiments_ecommece/: EDA.ipynb
experiments_setfit/: SetFit_SST_2.ipynb  SetFit_news_paragraphs_v1.0.ipynb  huggingface_dataset_demo.ipynb  prepare_training_data.ipynb  prepare_training_data_ai_generated.ipynb  prepare_training_data_labelled.ipynb  setfit_demo.ipynb  setfit_inference.ipynb  setfit_n_pretrained_demo.ipynb
experiments_setfit/sample_few_shot_data/: sample_few_shot.csv  sample_few_shot.xlsx
experiments_umap/: umap_demo.ipynb
src/: __init__.py  helpers.py
temp_training/ai_generated/: 0_lawsuit_legal_insurance.txt  10_cybersecurity.txt  11_forced_labor.txt  12_pandemics_large_scale_diseases.txt  13_trade_war_embargos_bans.txt  14_war_conflict.txt  15_domestic_unrest_violence.txt  1_general_biz_trend.txt  2_leisure_other_news.txt  3_later_report.txt  4_railway.txt  5_maritime.txt  (+4 more)
(+39 files in other folders)
