[metadata]
name = mlflow_tutorial
version = 1.0
author = Joshua Le
author_email = phuonglevu3112@gmail.com
description = MLFlow experiments
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license_files = LICENSE.txt

[options]
packages = find:

[options.packages.find]
include = src